fixed cropped countdown board and edited button radius in css

--- a/style.css
+++ b/style.css
@@ -184,9 +184,9 @@ button {
     background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
     filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffec64', endColorstr='#ffab23',GradientType=0);
     background-color:#ffec64;
-    -moz-border-radius:6px;
-    -webkit-border-radius:6px;
-    border-radius:6px;
+    -moz-border-radius:30px;
+    -webkit-border-radius:30px;
+    border-radius:30px;
     border:1px solid #ffaa22;
     display:inline-block;
     cursor:url("img/hammer_small.png"), auto;
@@ -320,10 +320,11 @@ button:active {
         /*display: flex;*/
         /*align-self: flex-end;*/
         /*order:3;*/
+        border-radius: 60px;
     }
 
     #countdown_wrapper {
-        width:85%;
+        width:100%;
         height: 85%;
         display: flex;
         /*order: 1;*/
